--- a/src/apollo/locale/az/LC_MESSAGES/django.po
+++ b/src/apollo/locale/az/LC_MESSAGES/django.po
@@ -1,7 +1,7 @@
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
-#
+# 
 # Translators:
 # cdoten <cdoten@ndi.org>, 2013
 # emin.mammedli <emin.mammedli@gmail.com>, 2013
@@ -11,14 +11,13 @@ msgstr ""
 "Project-Id-Version: Apollo\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-09-24 14:46+0500\n"
-"PO-Revision-Date: 2013-09-24 09:32+0000\n"
+"PO-Revision-Date: 2013-09-24 09:49+0000\n"
 "Last-Translator: takinbo <takinbo@timbaobjects.com>\n"
-"Language-Team: Azerbaijani (http://www.transifex.com/projects/p/apollo/"
-"language/az/)\n"
-"Language: az\n"
+"Language-Team: Azerbaijani (http://www.transifex.com/projects/p/apollo/language/az/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language: az\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
 
 #: settings.py:249
@@ -37,38 +36,29 @@ msgstr ""
 #, python-format
 msgid ""
 "Invalid response(s) for question(s): \"%(attributes)s\". You sent: %(text)s"
-msgstr ""
-"Sual(lar)a düzgün cavab verilməyib: \"%(attributes)s\". Sizin göndərdiyiniz: "
-"%(text)s"
+msgstr "Sual(lar)a düzgün cavab verilməyib: \"%(attributes)s\". Sizin göndərdiyiniz: %(text)s"
 
 #: core/app.py:19
 #, python-format
 msgid "Unknown question codes: \"%(attributes)s\". You sent: %(text)s"
-msgstr ""
-"Sual kodları səhvdir: \"%(attributes)s\". Sizin göndərdiyiniz: %(text)s"
+msgstr "Sual kodları səhvdir: \"%(attributes)s\". Sizin göndərdiyiniz: %(text)s"
 
 #: core/app.py:20
 #, python-format
 msgid ""
 "Observer ID not found. Please resend with valid Observer ID. You sent: "
 "%(text)s"
-msgstr ""
-"Müşahidəçi kodu səhvdir. Xahiş edirik düzgün Müşahidəçi kodundan istifadə "
-"edib mesajı yenidən göndərin. Sizin göndərdiyiniz: %(text)s"
+msgstr "Müşahidəçi kodu səhvdir. Xahiş edirik düzgün Müşahidəçi kodundan istifadə edib mesajı yenidən göndərin. Sizin göndərdiyiniz: %(text)s"
 
 #: core/app.py:21
 #, python-format
 msgid "Invalid message: \"%(message)s\". Please check and resend!"
-msgstr ""
-"Düzgün olmayan mesaj: \"%(message)s\". Xahiş edirik, yoxlayın və yenidən "
-"göndərin!"
+msgstr "Düzgün olmayan mesaj: \"%(message)s\". Xahiş edirik, yoxlayın və yenidən göndərin!"
 
 #: core/app.py:22
 #, python-format
 msgid "Thank you! Your report was received! You sent: %(message)s"
-msgstr ""
-"Təşəkkür edirik! Sizin hesabatınız qəbul olundu! Sizin göndərdiyiniz: "
-"%(message)s"
+msgstr "Təşəkkür edirik! Sizin hesabatınız qəbul olundu! Sizin göndərdiyiniz: %(message)s"
 
 #: core/filters.py:89
 msgid "Activity"
@@ -255,9 +245,7 @@ msgstr "Təhlil filterində bu yer növünün əks olunmasını idarə edir"
 
 #: core/models.py:53
 msgid "Determines whether this LocationType can be used in SMS forms"
-msgstr ""
-"Bu yer növünün SMS formalarında istifadə olunub və ya oluna bilməyəcəyini "
-"müəyyən edir"
+msgstr "Bu yer növünün SMS formalarında istifadə olunub və ya oluna bilməyəcəyini müəyyən edir"
 
 #: core/models.py:221
 msgid "Male"
@@ -408,8 +396,8 @@ msgstr ""
 msgid ""
 "Don't freak out, maybe you entered the wrong address or clicked a bad link! "
 "Who knows, this could even be a fluke! :) I recommend you either verify the "
-"address or click the back arrow (&larr;) at the top left corner of the page, "
-"and cross-check the action you were trying to perform!"
+"address or click the back arrow (&larr;) at the top left corner of the page,"
+" and cross-check the action you were trying to perform!"
 msgstr ""
 
 #: core/templates/500.html:6
@@ -689,9 +677,7 @@ msgstr "İstifadəçi Girişi"
 #: core/templates/core/login.html:30
 msgid ""
 "Your username and password <strong>did not match</strong>. Please try again."
-msgstr ""
-"Sizin istifadəçi adınız və şifrəniz <strong> uyğun gəlmir </strong>. Yenidən "
-"yoxlayın."
+msgstr "Sizin istifadəçi adınız və şifrəniz <strong> uyğun gəlmir </strong>. Yenidən yoxlayın."
 
 #: core/templates/core/login.html:34
 msgid "Username"
@@ -745,10 +731,10 @@ msgid "To"
 msgstr "Kimə"
 
 #: core/templates/core/send_message_modal.html:11
-#, fuzzy, python-format
+#, python-format
 msgid "%(counter)s recipient"
 msgid_plural "%(counter)s recipients"
-msgstr[0] "%(counter|default:_(\"no\"))lər alıcılar "
+msgstr[0] "%(counter)s alıcılar "
 
 #: core/templates/core/send_message_modal.html:12
 msgid "characters"
@@ -950,18 +936,14 @@ msgstr "Naməlum başlıq"
 #, python-format
 msgid ""
 "The column '%(column)s' is twice in your file's headers (sheet '%(sheet)s')"
-msgstr ""
-"Sütün '%(column)s' sizin faylın başlığında (sheet '%(sheet)s') iki dəfə "
-"göstərilib"
+msgstr "Sütün '%(column)s' sizin faylın başlığında (sheet '%(sheet)s') iki dəfə göstərilib"
 
 #: tabimport/__init__.py:154
 #, python-format
 msgid ""
 "The header '%(header)s' is mandatory and is missing in sheet '%(sheet)s' of "
 "your file"
-msgstr ""
-"Başlığın '%(header)s' qeyd olunması vacibdir və sizin faylın səhifəsində "
-"'%(sheet)s' çatışmır"
+msgstr "Başlığın '%(header)s' qeyd olunması vacibdir və sizin faylın səhifəsində '%(sheet)s' çatışmır"
 
 #: tabimport/__init__.py:221
 msgid "Unable to read the file. Are you sure it is an XLS file?"
@@ -971,17 +953,13 @@ msgstr "Fayl oxumaq mümkün olmadı. Faylın XLS formatında olduğuna əminsin
 msgid ""
 "The ODS file contains formula. Please convert them to raw values before "
 "importing the file."
-msgstr ""
-"ODS faylında formulalar var. Zəhmət olmasa faylı import etməmişdən öncə, "
-"onları təmiz dəyərlərə ççevirin"
+msgstr "ODS faylında formulalar var. Zəhmət olmasa faylı import etməmişdən öncə, onları təmiz dəyərlərə ççevirin"
 
 #: tabimport/forms.py:32
 msgid ""
 "The key field is the field which will determine if the entry is a new one. "
 "Typically a unique ID field."
-msgstr ""
-"Açar sahə daxil olmanın yeni olduğunu müəyyən edən bölmədir. Adətən "
-"özünəməxsus İD sahəsidir."
+msgstr "Açar sahə daxil olmanın yeni olduğunu müəyyən edən bölmədir. Adətən özünəməxsus İD sahəsidir."
 
 #: tabimport/views.py:33
 #, python-format
