--- a/src/apollo/locale/fr/LC_MESSAGES/django.po
+++ b/src/apollo/locale/fr/LC_MESSAGES/django.po
@@ -1,7 +1,7 @@
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
-#
+# 
 # Translators:
 # cdoten <cdoten@ndi.org>, 2013
 # iwoodward <iwoodward@ndi.org>, 2013
@@ -10,14 +10,13 @@ msgstr ""
 "Project-Id-Version: Apollo\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-09-24 14:46+0500\n"
-"PO-Revision-Date: 2013-09-17 14:23+0000\n"
-"Last-Translator: iwoodward <iwoodward@ndi.org>\n"
-"Language-Team: French (http://www.transifex.com/projects/p/apollo/language/"
-"fr/)\n"
-"Language: fr\n"
+"PO-Revision-Date: 2013-09-24 09:48+0000\n"
+"Last-Translator: takinbo <takinbo@timbaobjects.com>\n"
+"Language-Team: French (http://www.transifex.com/projects/p/apollo/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language: fr\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
 
 #: settings.py:249
@@ -36,9 +35,7 @@ msgstr ""
 #, python-format
 msgid ""
 "Invalid response(s) for question(s): \"%(attributes)s\". You sent: %(text)s"
-msgstr ""
-"Le réponse pour les questions \"%(attributes)s\" sont invalides. Vous avez "
-"envoyer %(text)s."
+msgstr "Le réponse pour les questions \"%(attributes)s\" sont invalides. Vous avez envoyer %(text)s."
 
 #: core/app.py:19
 #, python-format
@@ -398,8 +395,8 @@ msgstr ""
 msgid ""
 "Don't freak out, maybe you entered the wrong address or clicked a bad link! "
 "Who knows, this could even be a fluke! :) I recommend you either verify the "
-"address or click the back arrow (&larr;) at the top left corner of the page, "
-"and cross-check the action you were trying to perform!"
+"address or click the back arrow (&larr;) at the top left corner of the page,"
+" and cross-check the action you were trying to perform!"
 msgstr ""
 
 #: core/templates/500.html:6
