--- a/apollo/frontend/translations/az/LC_MESSAGES/messages.po
+++ b/apollo/frontend/translations/az/LC_MESSAGES/messages.po
@@ -260,7 +260,6 @@ msgid "Checklist"
 msgstr "Yoxlama vərəqi"
 
 #: core/models.py:353
-msgctxt "Critical Incident"
 msgid "Incident"
 msgstr "İnsident"
 
@@ -455,8 +454,8 @@ msgid "Last Page"
 msgstr "Sonuncu Səhifə"
 
 #: core/templates/bootstrap-pagination/pagination.html:41
-msgid "Showing:"
-msgstr "Göstərir:"
+msgid "Showing"
+msgstr "Göstərir"
 
 #: core/templates/core/activity_selection.html:5
 #: core/templates/core/activity_selection.html:24
@@ -468,12 +467,10 @@ msgid "Go"
 msgstr "İrəli"
 
 #: core/templates/core/analysis_menu.html:2
-msgctxt "adjective"
 msgid "Analysis"
 msgstr "Təhlil"
 
 #: core/templates/core/analysis_menu.html:11
-msgctxt "noun"
 msgid "Results"
 msgstr "Nəticələr"
 
@@ -508,7 +505,6 @@ msgstr "Hamısı"
 #: core/templates/core/dashboard.html:13
 #: core/templates/core/dashboard_status_breakdown.html:13
 #: core/templates/core/results.html:11
-msgctxt "verb"
 msgid "Filter"
 msgstr "Filter"
 
@@ -527,7 +523,6 @@ msgid "No Data Available"
 msgstr "Məlumat Yoxdur"
 
 #: core/templates/core/checklist_summary_breakdown.html:22
-msgctxt "html"
 msgid "Table"
 msgstr "Cədvəl"
 
@@ -538,7 +533,6 @@ msgstr "Qrafiklər"
 
 #: core/templates/core/checklist_summary_breakdown.html:35
 #: core/templates/core/checklist_summary_breakdown.html:349
-msgctxt "statistics"
 msgid "Mean"
 msgstr "Orta həd"
 
@@ -556,7 +550,6 @@ msgstr "İmtina etmək"
 #: core/templates/core/submission_list.html:17
 #: core/templates/core/submission_list.html:23
 #: messagelog/templates/messagelog/message_list.html:5
-msgctxt "verb"
 msgid "Export"
 msgstr "Eksport"
 
@@ -571,7 +564,6 @@ msgstr "Mesaj Göndər"
 #: core/templates/core/submission_filter.html:19
 #: core/templates/core/verification_filter.html:22
 #: messagelog/templates/messagelog/message_list.html:21
-msgctxt "verb"
 msgid "Search"
 msgstr "Axtar"
 
@@ -580,27 +572,22 @@ msgstr "Axtar"
 #: core/templates/core/submission_filter.html:20
 #: core/templates/core/verification_filter.html:23
 #: messagelog/templates/messagelog/message_list.html:21
-msgctxt "verb"
 msgid "Clear"
 msgstr "Təmizlə"
 
 #: core/templates/core/contact_list.html:49
-msgctxt "adjective"
 msgid "Name"
 msgstr "Ad"
 
 #: core/templates/core/contact_list.html:50
-msgctxt "adjective"
 msgid "Role"
 msgstr "Rol"
 
 #: core/templates/core/contact_list.html:51
-msgctxt "adjective"
 msgid "Phone No."
 msgstr "Telefon No."
 
 #: core/templates/core/contact_list.html:52
-msgctxt "adjective"
 msgid "Location"
 msgstr "Yer"
 
@@ -608,7 +595,6 @@ msgstr "Yer"
 #: core/templates/core/location_list.html:37
 #: core/templates/core/verification_header.html:12
 #: core/templates/core/verification_items.html:28
-msgctxt "verb"
 msgid "Edit"
 msgstr "Redaktə et"
 
@@ -629,7 +615,6 @@ msgstr "Şahidi olub"
 
 #: core/templates/core/dashboard.html:14
 #: core/templates/core/dashboard_status_breakdown.html:14
-msgctxt "verb"
 msgid "Reset"
 msgstr "Əvvəlki Vəziyyətinə Qaytar"
 
@@ -654,7 +639,6 @@ msgstr "Çıxış"
 #: core/templates/core/submission_add.html:70
 #: core/templates/core/submission_edit.html:188
 #: core/templates/core/verification_edit.html:93
-msgctxt "verb"
 msgid "Cancel"
 msgstr "Ləgv et"
 
@@ -704,17 +688,14 @@ msgid "Votes"
 msgstr "Səslər"
 
 #: core/templates/core/results.html:41 core/templates/core/results.html:45
-msgctxt "abbreviation for margin of error"
 msgid "MoE"
 msgstr "Təhsil Nazirliyi"
 
 #: core/templates/core/results.html:43
-msgctxt "abbreviation for total votes"
 msgid "TV"
 msgstr "TV"
 
 #: core/templates/core/results.html:44
-msgctxt "abbreviation for rejected ballots"
 msgid "RB"
 msgstr ""
 
@@ -746,17 +727,14 @@ msgid "message part"
 msgstr "mesajın hissəsi"
 
 #: core/templates/core/send_message_modal.html:21
-msgctxt "verb"
 msgid "Send"
 msgstr "Göndər"
 
 #: core/templates/core/send_message_modal.html:41
-msgctxt "number of characters in sentence"
 msgid "characters"
 msgstr "işarələr"
 
 #: core/templates/core/send_message_modal.html:41
-msgctxt "number of characters in sentence"
 msgid "character"
 msgstr "işarə"
 
@@ -783,7 +761,6 @@ msgstr "Yenidən göndərməyə çalışın"
 #: core/templates/core/submission_add.html:67
 #: core/templates/core/submission_edit.html:185
 #: core/templates/core/verification_edit.html:90
-msgctxt "verb"
 msgid "Save"
 msgstr "Yadda saxla"
 
@@ -906,12 +883,10 @@ msgid "Direction"
 msgstr "İstiqamət"
 
 #: messagelog/templates/messagelog/message_list.html:46
-msgctxt "adjective"
 msgid "IN"
 msgstr "DAXİLƏ"
 
 #: messagelog/templates/messagelog/message_list.html:46
-msgctxt "adjective"
 msgid "OUT"
 msgstr "XARİCƏ"
 
