--- a/apollo/frontend/translations/messages.pot
+++ b/apollo/frontend/translations/messages.pot
@@ -1,20 +1,17 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) 2013 THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
+# Translations template for PROJECT.
+# Copyright (C) 2014 ORGANIZATION
+# This file is distributed under the same license as the PROJECT project.
+# FIRST AUTHOR <EMAIL@ADDRESS>, 2014.
 #
-# Translators:
-# cdoten <cdoten@ndi.org>, 2013
-# iwoodward <iwoodward@ndi.org>, 2013
+#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version:  Apollo\n"
-"Report-Msgid-Bugs-To: \n"
+"Project-Id-Version: PROJECT VERSION\n"
+"Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
 "POT-Creation-Date: 2014-07-02 19:37+0100\n"
-"PO-Revision-Date: 2013-09-24 09:48+0000\n"
-"Last-Translator: takinbo <takinbo@timbaobjects.com>\n"
-"Language-Team: French "
-"(http://www.transifex.com/projects/p/apollo/language/fr/)\n"
-"Plural-Forms: nplurals=2; plural=(n > 1)\n"
+"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
+"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -176,7 +173,7 @@ msgstr ""
 #: frontend/templates/frontend/participant_performance_list.html:50
 #: frontend/templates/frontend/macros/participant_list_filter.html:8
 msgid "Name"
-msgstr "Nom"
+msgstr ""
 
 #: frontend/forms.py:76 frontend/forms.py:156
 #: frontend/templates/frontend/participant_list.html:79
@@ -906,11 +903,8 @@ msgid "Unknown question codes: \"{questions}\". You sent: {text}"
 msgstr ""
 
 #: messaging/helpers.py:60
-#, fuzzy, python-format
 msgid "Invalid response(s) for question(s): \"{questions}\". You sent: {text}"
 msgstr ""
-"Le réponse pour les questions \"%(attributes)s\" sont invalides. Vous "
-"avez envoyer %(text)s."
 
 #: messaging/helpers.py:71
 msgid "Invalid message: \"{text}\". Please check and resend!"
@@ -986,294 +980,4 @@ msgstr ""
 #: submissions/models.py:490
 msgid "API"
 msgstr ""
-
-#~ msgid "English"
-#~ msgstr "Anglais"
-
-#~ msgid "Azerbaijani"
-#~ msgstr "Français"
-
-#~ msgid "French"
-#~ msgstr ""
-
-#~ msgid "Unknown question codes: \"%(attributes)s\". You sent: %(text)s"
-#~ msgstr ""
-
-#~ msgid ""
-#~ "Observer ID not found. Please resend "
-#~ "with valid Observer ID. You sent: "
-#~ "%(text)s"
-#~ msgstr ""
-
-#~ msgid "Invalid message: \"%(message)s\". Please check and resend!"
-#~ msgstr ""
-
-#~ msgid "Thank you! Your report was received! You sent: %(message)s"
-#~ msgstr ""
-
-#~ msgid "Activity"
-#~ msgstr ""
-
-#~ msgid "All Location Types"
-#~ msgstr ""
-
-#~ msgid "Verification"
-#~ msgstr ""
-
-#~ msgid "Observer"
-#~ msgstr ""
-
-#~ msgid "Phone #%(index)d"
-#~ msgstr ""
-
-#~ msgid "Phone #1"
-#~ msgstr ""
-
-#~ msgid "Controls the display of this location type on the form lists"
-#~ msgstr ""
-
-#~ msgid "Controls the display of this location type on the dashboard filter"
-#~ msgstr ""
-
-#~ msgid "Controls the display of this location type on the analysis filter"
-#~ msgstr ""
-
-#~ msgid "Determines whether this LocationType can be used in SMS forms"
-#~ msgstr ""
-
-#~ msgid "Checklist"
-#~ msgstr ""
-
-#~ msgid "Incident"
-#~ msgstr ""
-
-#~ msgid "Whether to create a new record if a submission doesn't exist"
-#~ msgstr ""
-
-#~ msgid "Abbreviated version of the group name"
-#~ msgstr ""
-
-#~ msgid "Process"
-#~ msgstr ""
-
-#~ msgid "Candidate Vote"
-#~ msgstr ""
-
-#~ msgid "Complete"
-#~ msgstr ""
-
-#~ msgid "Partial"
-#~ msgstr ""
-
-#~ msgid "Empty"
-#~ msgstr ""
-
-#~ msgid "%(form)s Voting Results"
-#~ msgstr ""
-
-#~ msgid "PSZ"
-#~ msgstr ""
-
-#~ msgid "Timestamp"
-#~ msgstr ""
-
-#~ msgid "Edit Verification"
-#~ msgstr ""
-
-#~ msgid "Observers"
-#~ msgstr ""
-
-#~ msgid "Edit Observer"
-#~ msgstr ""
-
-#~ msgid "Forbidden Error"
-#~ msgstr ""
-
-#~ msgid "Off Limits!"
-#~ msgstr ""
-
-#~ msgid ""
-#~ "We understood your request, but we "
-#~ "refuse to honor it! You are seeing"
-#~ " this page because you were snooping"
-#~ " around! Now paddle along before the"
-#~ " buzzer goes off!"
-#~ msgstr ""
-
-#~ msgid "Page not found"
-#~ msgstr ""
-
-#~ msgid "Oh No! Looks like you're lost!"
-#~ msgstr ""
-
-#~ msgid ""
-#~ "Don't freak out, maybe you entered "
-#~ "the wrong address or clicked a bad"
-#~ " link! Who knows, this could even "
-#~ "be a fluke! :) I recommend you "
-#~ "either verify the address or click "
-#~ "the back arrow (&larr;) at the top"
-#~ " left corner of the page, and "
-#~ "cross-check the action you were "
-#~ "trying to perform!"
-#~ msgstr ""
-
-#~ msgid "Server Error"
-#~ msgstr ""
-
-#~ msgid "Zong! We screwed up"
-#~ msgstr ""
-
-#~ msgid ""
-#~ "You shouldn't be seeing this page "
-#~ "but you are because you're a "
-#~ "genius and have found a rare bug"
-#~ " in the software. Rest assured, we"
-#~ " now know about it and will fix"
-#~ " it ASAP!"
-#~ msgstr ""
-
-#~ msgid "Ongoing Maintenance"
-#~ msgstr ""
-
-#~ msgid ""
-#~ "The application is currently down due"
-#~ " to ongoing maintenance, however, we "
-#~ "will be up and running shortly! "
-#~ "Thanks."
-#~ msgstr ""
-
-#~ msgid "Current Page"
-#~ msgstr ""
-
-#~ msgid "Page"
-#~ msgstr ""
-
-#~ msgid "Choose Activity"
-#~ msgstr ""
-
-#~ msgid "Analysis"
-#~ msgstr ""
-
-#~ msgid "Results"
-#~ msgstr ""
-
-#~ msgid "Phone No."
-#~ msgstr ""
-
-#~ msgid "Map"
-#~ msgstr ""
-
-#~ msgid "Incidents"
-#~ msgstr ""
-
-#~ msgid "Logout"
-#~ msgstr ""
-
-#~ msgid "User Login"
-#~ msgstr ""
-
-#~ msgid ""
-#~ "Your username and password <strong>did "
-#~ "not match</strong>. Please try again."
-#~ msgstr ""
-
-#~ msgid "Username"
-#~ msgstr ""
-
-#~ msgid "Password"
-#~ msgstr ""
-
-#~ msgid "Sign In"
-#~ msgstr ""
-
-#~ msgid "Total Valid"
-#~ msgstr ""
-
-#~ msgid "Rejected Ballots"
-#~ msgstr ""
-
-#~ msgid "MoE"
-#~ msgstr ""
-
-#~ msgid "Rural"
-#~ msgstr ""
-
-#~ msgid "Urban"
-#~ msgstr ""
-
-#~ msgid "Texted Location"
-#~ msgstr ""
-
-#~ msgid "<em>N/A</em>"
-#~ msgstr ""
-
-#~ msgid "No Data"
-#~ msgstr ""
-
-#~ msgid "Incoming"
-#~ msgstr ""
-
-#~ msgid "Outgoing"
-#~ msgstr ""
-
-#~ msgid "Message direction"
-#~ msgstr ""
-
-#~ msgid "Created"
-#~ msgstr ""
-
-#~ msgid "Delivered"
-#~ msgstr ""
-
-#~ msgid "Unknown file extension '%(format)s'"
-#~ msgstr ""
-
-#~ msgid "This file is not in an accepted format (ods, xls, csv)"
-#~ msgstr ""
-
-#~ msgid "Empty header"
-#~ msgstr ""
-
-#~ msgid "Unknown header"
-#~ msgstr ""
-
-#~ msgid ""
-#~ "The column '%(column)s' is twice in "
-#~ "your file's headers (sheet '%(sheet)s')"
-#~ msgstr ""
-
-#~ msgid ""
-#~ "The header '%(header)s' is mandatory and"
-#~ " is missing in sheet '%(sheet)s' of"
-#~ " your file"
-#~ msgstr ""
-
-#~ msgid "Unable to read the file. Are you sure it is an XLS file?"
-#~ msgstr ""
-
-#~ msgid ""
-#~ "The ODS file contains formula. Please"
-#~ " convert them to raw values before"
-#~ " importing the file."
-#~ msgstr ""
-
-#~ msgid ""
-#~ "The key field is the field which"
-#~ " will determine if the entry is "
-#~ "a new one. Typically a unique ID"
-#~ " field."
-#~ msgstr ""
-
-#~ msgid "The import failed. Error message: %s"
-#~ msgstr ""
-
-#~ msgid "Created objects: %(cr)d, modified objects: %(mod)d"
-#~ msgstr ""
-
-#~ msgid "Data import"
-#~ msgstr ""
-
-#~ msgid "submit"
-#~ msgstr ""
 
