--- a/README
+++ b/README
@@ -6,3 +6,5 @@ and provides tools to enable data managers and clerks manage
 the collected data. Apollo is capable of validating collected
 data and providing user-friendly error reports to enable
 election observers self-correct and resend their information.
+
+[![CircleCI](https://circleci.com/gh/nditech/dev-elections/tree/master.svg?style=svg&circle-token=d73aae2670476f167920a4494b6087a6f8ef49e9)](https://circleci.com/gh/nditech/dev-elections/tree/master)
