--- a/apollo/translations/fr/LC_MESSAGES/messages.po
+++ b/apollo/translations/fr/LC_MESSAGES/messages.po
@@ -8,14 +8,16 @@
 # Evan Summers <esummers@ndi.org>, 2014
 # Ian Woodward <iwoodward@ndi.org>, 2013
 # Mansour Ayouni <mansourayouni@gmail.com>, 2013-2014
+# Mohammad Khasawneh <mkhasawneh@ndi.org>, 2016
 # NadiaBS <nsalah@ndi.org>, 2014
+# Youssef Ajnah <yajnah@ndi.org>, 2016
 msgid ""
 msgstr ""
 "Project-Id-Version: Elections DemTool\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
 "POT-Creation-Date: 2016-09-14 17:25+0100\n"
-"PO-Revision-Date: 2016-09-14 16:27+0000\n"
-"Last-Translator: Tim Akinbo <takinbo@timbaobjects.com>\n"
+"PO-Revision-Date: 2016-09-24 18:50+0000\n"
+"Last-Translator: Youssef Ajnah <yajnah@ndi.org>\n"
 "Language-Team: French (http://www.transifex.com/nditech/apollo/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -93,11 +95,11 @@ msgstr "Rôles autorisés"
 msgid ""
 "Checklists are being created for the form, role and location type you "
 "selected in the current event"
-msgstr ""
+msgstr "Formulaires à liste en cours de creation pour le formulaire, role et type d'emplacement que vous avez sélectionné dans l'événement en cours"
 
 #: formsframework/views_forms.py:47
 msgid "Checklists were not created"
-msgstr ""
+msgstr "Formulaires à liste n'ont pas été créés"
 
 #: formsframework/views_forms.py:58
 msgid "Form Builder"
@@ -235,11 +237,11 @@ msgstr "Mettre les résultats en quarantaine"
 
 #: frontend/filters.py:534
 msgid "Quality Check Criterion"
-msgstr ""
+msgstr "Critère de Contrôle de la qualité"
 
 #: frontend/filters.py:536
 msgid "Quality Check Condition"
-msgstr ""
+msgstr "Condition de Contrôle de la qualité "
 
 #: frontend/forms.py:45 frontend/forms.py:48 frontend/forms.py:411
 #: frontend/templates/frontend/form_list.html:85
@@ -291,7 +293,7 @@ msgstr "Téléphone"
 #: frontend/forms.py:92 frontend/forms.py:160
 #: frontend/templates/frontend/login_user.html:56
 msgid "Password"
-msgstr ""
+msgstr "Mot de passe"
 
 #: frontend/forms.py:122 frontend/forms.py:204
 msgid "Select column"
@@ -387,15 +389,15 @@ msgstr "Fichier de données"
 
 #: frontend/forms.py:402
 msgid "Select form"
-msgstr ""
+msgstr "Sélectionnez le Formulaire"
 
 #: frontend/forms.py:408
 msgid "Select role"
-msgstr ""
+msgstr "Sélectionnez le rôle"
 
 #: frontend/forms.py:414
 msgid "Select location type"
-msgstr ""
+msgstr "Sélectionnez le type d'emplacement"
 
 #: frontend/template_filters.py:95
 msgid "N/A"
@@ -419,27 +421,27 @@ msgstr "Nouveau mot de passe "
 
 #: frontend/views_admin.py:216
 msgid "Disable"
-msgstr ""
+msgstr "Désactiver"
 
 #: frontend/views_admin.py:216
 msgid "Are you sure you want to disable selected users?"
-msgstr ""
+msgstr "Êtes-vous sûr de vouloir désactiver les utilisateurs sélectionnés?"
 
 #: frontend/views_admin.py:219
 msgid "User(s) successfully disabled."
-msgstr ""
+msgstr "Utilisateur(s) désactivé(s) avec succès."
 
 #: frontend/views_admin.py:221
 msgid "Enable"
-msgstr ""
+msgstr "Activer"
 
 #: frontend/views_admin.py:221
 msgid "Are you sure you want to enable selected users?"
-msgstr ""
+msgstr "Êtes-vous sûr de vouloir activer les utilisateurs sélectionnés?"
 
 #: frontend/views_admin.py:224
 msgid "User(s) successfully enabled."
-msgstr ""
+msgstr "Utilisateur(s) activé(s) avec succès."
 
 #: frontend/views_admin.py:251
 msgid "Permissions"
@@ -468,7 +470,7 @@ msgstr ""
 
 #: frontend/templates/403.html:16
 msgid "Off Limits!"
-msgstr ""
+msgstr "Hors limites!"
 
 #: frontend/templates/403.html:17
 msgid ""
@@ -479,11 +481,11 @@ msgstr ""
 
 #: frontend/templates/404.html:5
 msgid "Page not found"
-msgstr ""
+msgstr "Page non trouvée"
 
 #: frontend/templates/404.html:16
 msgid "Oh No! Looks like you're lost!"
-msgstr ""
+msgstr "Oh non! On dirait que vous êtes perdu!"
 
 #: frontend/templates/404.html:17
 msgid ""
@@ -495,11 +497,11 @@ msgstr ""
 
 #: frontend/templates/500.html:5
 msgid "Server Error"
-msgstr ""
+msgstr "Erreur de serveur"
 
 #: frontend/templates/500.html:16
 msgid "Zong! We screwed up :("
-msgstr ""
+msgstr "Oups! Nous avons un problème :("
 
 #: frontend/templates/500.html:17
 msgid ""
@@ -510,11 +512,11 @@ msgstr ""
 
 #: frontend/templates/frontend/_layout.html:92
 msgid "Admin"
-msgstr ""
+msgstr "Administrateur"
 
 #: frontend/templates/frontend/_layout.html:109
 msgid "Logout"
-msgstr ""
+msgstr "Se déconnecter"
 
 #: frontend/templates/frontend/dashboard.html:76
 #: frontend/templates/frontend/location_list.html:80
@@ -540,7 +542,7 @@ msgstr "Aller"
 #: frontend/templates/frontend/form_list.html:74
 #: frontend/templates/frontend/form_list.html:89
 msgid "Create checklists"
-msgstr ""
+msgstr "Créer des Formulaires à liste"
 
 #: frontend/templates/frontend/form_list.html:4
 msgid "Add form"
@@ -1320,7 +1322,7 @@ msgstr "VÉRIFIÉ"
 
 #: submissions/models.py:37
 msgid "REJECTED"
-msgstr ""
+msgstr "REJETÉ"
 
 #: submissions/models.py:42
 msgid "Status — No Problem"
